# mclc

./: .gitignore  CHANGELOG.md  README.md  blocks.txt  command.txt  mclc.cabal
app/: AStar.hs  Layout.hs  Main.hs  NormalizedGraph.hs  Synthesis.hs  Tokenizer.hs
examples/correct/: 2BitAdder.mcl  andGate.mcl  multiplex.mcl  singleAnd.mcl  singleNand.mcl  usingOtherEntity.mcl
examples/errors/: unknown_port_target.mcl
haskell/: mclc.cabal
haskell/app/: BuiltinGraph.hs  EntityGraph.hs  Layout.hs  NormalizedGraph.hs  Parser.hs  Semantics.hs  Synthesis.hs
rust/mclc/: Cargo.toml  commands.txt
rust/mclc/src/: astar.rs  commands.rs  connect_nodes.rs  graph.rs  lib.rs  main.rs  placement.rs  space.rs  visualize.rs
rust/mclc/tests/: generate_placement.rs  parse_graph.rs
